--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">NewsTitleHanleixin</string>
+
+    <string name="main_home">推荐</string>
+    <string name="main_score">视频</string>
+    <string name="main_care">关心</string>
+    <string name="main_mine">我的</string>
 </resources>
